스프링 부트 - 핵심 원리와 활용 : 외부설정 -  내부파일 합체(application-dev, application-prod -> application)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+#???? ??? application.properties ?? ??? ????? ??? ???? ??? ????.
+#application.properties ?? ??? ?? ??? ????? ??? ?? ? ??.
+#application.properties ?? ?? #--- ?? !--- (dash 3)
+#application.yml ?? ?? --- (dash 3)
 
+#??!
+#?? ?? ?? ???? ?? ??? ??? ?? ??? 3?? ??? ??? ??? ??.
+#?? ?? ?? ?? ?? ?? ?? ?? ???? ???? ??.
+
+spring.config.activate.on-profile=dev
+url=dev.db.com
+username=dev_user
+password=dev_pw
+#---
+spring.config.activate.on-profile=prod
+url=prod.db.com
+username=prod_user
+password=prod_pw
