--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,15 @@
 #?? ?? ?? ???? ?? ??? ??? ?? ??? 3?? ??? ??? ??? ??.
 #?? ?? ?? ?? ?? ?? ?? ?? ???? ???? ??.
 
+
+#???? application.properies? ??? ?? ????? ???.
+#spring.config.activate.on-profile? ??? default???.
+# spring.config.activate.on-profile=dev,prod? ???? dev?? ?? ????? prod? ??? ??? ???? prod? ???.
+# ???? ?? ???? spring.config.activate.on-profile? ???? ?? ?? ?? ???? ?? ?? ??? ????? ?? ?? ????? ???? ?? ??????.
+url=local.db.com
+username=local_user
+password=local_pw
+#---
 spring.config.activate.on-profile=dev
 url=dev.db.com
 username=dev_user
@@ -16,3 +25,10 @@ spring.config.activate.on-profile=prod
 url=prod.db.com
 username=prod_user
 password=prod_pw
+#---
+#url=hello.db.com
+
+
+#??
+#???? ??? ??? ??? ???? ???? ?? ????. ?? ?? ???? ??? ????.
+#?? ??? spring.config.activate.on-profile ??? ??? ?? ???? ??? ?? ?? ??? ????.
