스프링 부트 - 핵심 원리와 활용 : 외부설정 - 정리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-#???? ??? application.properties ?? ??? ????? ??? ???? ??? ????.
-#application.properties ?? ??? ?? ??? ????? ??? ?? ? ??.
-#application.properties ?? ?? #--- ?? !--- (dash 3)
-#application.yml ?? ?? --- (dash 3)
+#\uC2A4\uD504\uB9C1\uC740 \uD558\uB098\uC758 application.properties \uD30C\uC77C \uC548\uC5D0\uC11C \uB17C\uB9AC\uC801\uC73C\uB85C \uC601\uC5ED\uC744 \uAD6C\uBD84\uD558\uB294 \uBC29\uBC95\uC744 \uC81C\uACF5\uD55C\uB2E4.
+#application.properties \uB77C\uB294 \uD558\uB098\uC758 \uD30C\uC77C \uC548\uC5D0\uC11C \uB17C\uB9AC\uC801\uC73C\uB85C \uC601\uC5ED\uC744 \uB098\uB20C \uC218 \uC788\uB2E4.
+#application.properties \uAD6C\uBD84 \uBC29\uBC95 #--- \uB610\uB294 !--- (dash 3)
+#application.yml \uAD6C\uBD84 \uBC29\uBC95 --- (dash 3)
 
-#??!
-#?? ?? ?? ???? ?? ??? ??? ?? ??? 3?? ??? ??? ??? ??.
-#?? ?? ?? ?? ?? ?? ?? ?? ???? ???? ??.
+#\uC8FC\uC758!
+#\uC18D\uC131 \uD30C\uC77C \uAD6C\uBD84 \uAE30\uD638\uC5D0\uB294 \uC120\uD589 \uACF5\uBC31\uC774 \uC5C6\uC5B4\uC57C \uD558\uBA70 \uC815\uD655\uD788 3\uAC1C\uC758 \uD558\uC774\uD508 \uBB38\uC790\uAC00 \uC788\uC5B4\uC57C \uD55C\uB2E4.
+#\uAD6C\uBD84 \uAE30\uD638 \uBC14\uB85C \uC55E\uACFC \uB4A4\uC758 \uC904\uC740 \uAC19\uC740 \uC8FC\uC11D \uC811\uB450\uC0AC\uAC00 \uC544\uB2C8\uC5B4\uC57C \uD55C\uB2E4.
 
 
-#???? application.properies? ??? ?? ????? ???.
-#spring.config.activate.on-profile? ??? default???.
-# spring.config.activate.on-profile=dev,prod? ???? dev?? ?? ????? prod? ??? ??? ???? prod? ???.
-# ???? ?? ???? spring.config.activate.on-profile? ???? ?? ?? ?? ???? ?? ?? ??? ????? ?? ?? ????? ???? ?? ??????.
+#spring.config.activate.on-profile\uC774 \uC5C6\uC73C\uBA74 default \uAC12
+# application.properties \uB294 \uC21C\uC11C\uB300\uB85C \uC77D\uB294\uB2E4.
+# spring.config.activate.on-profile=dev,prod 2\uAC1C \uAC12\uB3C4 \uC0AC\uC6A9\uAC00\uB2A5 dev,prod\uB85C \uC120\uC5B8 \uC2DC \uBB38\uC11C \uC21C\uC11C\uB300\uB85C \uC77D\uC5B4 prod\uAC12\uC744 \uC77D\uB294\uB2E4.
+# \uCD5C\uD558\uB2E8 spring.config.activate.on-profile\uC774 \uC5C6\uC774 \uB2E4\uC2DC url\uC744 \uC120\uC5B8\uD55C\uB2E4\uBA74 \uC800 \uAC12\uC774 \uBB38\uC11C \uC21C\uC11C\uC0C1 \uC81C\uC77C \uC544\uB798 \uC788\uAE30 \uB584\uBB38\uC5D0 url\uC774 \uC800 \uAC12\uC73C\uB85C \uB36E\uC5B4\uC50C\uC5B4\uC9C4\uB2E4.(\uD504\uB85C\uD544\uC774 \uC5C6\uC5B4\uC11C \uAE30\uBCF8\uAC12\uC774 \uB418\uAE30 \uB54C\uBB38)
 url=local.db.com
 username=local_user
 password=local_pw
@@ -29,6 +29,6 @@ password=prod_pw
 #url=hello.db.com
 
 
-#??
-#???? ??? ??? ??? ???? ???? ?? ????. ?? ?? ???? ??? ????.
-#?? ??? spring.config.activate.on-profile ??? ??? ?? ???? ??? ?? ?? ??? ????.
+#\uC815\uB9AC
+#\uB2E8\uC21C\uD558\uAC8C \uBB38\uC11C\uB97C \uC704\uC5D0\uC11C \uC544\uB798\uB85C \uC21C\uC11C\uB300\uB85C \uC77D\uC73C\uBA74\uC11C \uAC12\uC744 \uC124\uC815\uD55C\uB2E4. \uC774\uB54C \uAE30\uC874 \uB370\uC774\uD130\uAC00 \uC788\uC73C\uBA74 \uB36E\uC5B4\uC4F4\uB2E4.
+#\uB17C\uB9AC \uBB38\uC11C\uC5D0 spring.config.activate.on-profile \uC635\uC158\uC774 \uC788\uC73C\uBA74 \uD574\uB2F9 \uD504\uB85C\uD544\uC744 \uC0AC\uC6A9\uD560 \uB54C\uB9CC \uB17C\uB9AC \uBB38\uC11C\uB97C \uC801\uC6A9\uD55C\uB2E4.
